--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -2053,12 +2053,16 @@
 	
 	<!-- Select database -->
 	<div id="DatabasePathForm" style="visibility: hidden; text-align: center;">
-		<img height= "100" src="Images/Icone.png"><br/><br/>
-		Sélectionner la base de donnée "PlanteVet.db" :<br/>
-		<input id="DatabasePathBtn" type="file" /><br/>
-		<input id="DatabaseImportBtn" type="button" value="Importer" onclick="DoImportDatabase();" /><br/>
+		<img height= "100" src="Images/Icone.png">
+		<br/>
+		<br/>Sélectionner la base de donnée "PlanteVet.db" :
+		<br/>
+		<br/><input id="DatabasePathBtn" type="file" />
+		<br/><input id="DatabaseImportBtn" type="button" value="Importer" onclick="DoImportDatabase();" />
+		<br/>
 		<br/>Les informations sont amenées à évoluer avec le temps.
-		<br/><br/>Cette base de données a été créée dans le cadre d'une thèse vétérinaire.
+		<br/>
+		<br/>Cette base de données a été créée dans le cadre d'une thèse vétérinaire.
 		<div id="DatabaseImportProgress" style="visibility: hidden;">
 			<progress max="100" value="0" id="DatabaseImportProgressBar"></progress>
 			<span id="DatabaseImportProgressTxt">Progress State ...</span><br/>
@@ -2118,3 +2122,4 @@
 	</div>	
 </body>
 </html>
+
