--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -7438,12 +7438,16 @@
 		
 	<!-- Select database -->
 	<div id="DatabasePathForm" style="visibility: hidden; text-align: center;">
-		<img height= "100" src="Images/Icone.png"><br/><br/>
-		Sélectionner la base de donnée "PlanteVet.db" :<br/>
-		<input id="DatabasePathBtn" type="file" /><br/>
-		<input id="DatabaseImportBtn" type="button" value="Importer" onclick="DoImportDatabase();" /><br/>	
+		<img height= "100" src="Images/Icone.png">
+		<br/>
+		<br/>Sélectionner la base de donnée "PlanteVet.db" :
+		<br/>
+		<br/><input id="DatabasePathBtn" type="file" />
+		<br/><input id="DatabaseImportBtn" type="button" value="Importer" onclick="DoImportDatabase();" />
+		<br/>	
 		<br/>Les informations sont amenées à évoluer avec le temps.
-		<br/><br/>Cette base de données a été créée dans le cadre d'une thèse vétérinaire.	
+		<br/>
+		<br/>Cette base de données a été créée dans le cadre d'une thèse vétérinaire.	
 		<div id="DatabaseImportProgress" style="visibility: hidden;">
 			<progress max="100" value="0" id="DatabaseImportProgressBar"></progress>
 			<span id="DatabaseImportProgressTxt">Progress State ...</span><br/>
@@ -7482,3 +7486,4 @@
 	
 </body>
 </html>
+
