--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		}
 		.half {
 			width: 50%;
-			border-top: 3px;
+			position: center;
+			border-top: 3px solid black;
 		}
 	</style>
 </head>
@@ -60,6 +61,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
