--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 		}
 		.top {
 			border-radius: 10px;
-			border-left: 3px solid green;
-			border-right: 3px solid green;
-			border-top: 3px solid green;
+			border-left-style: 3px solid green;
+			border-right-style: 3px solid green;
+			border-top-style: 3px solid green;
 		}
 		.center {
-			border-left: 3px solid green;
-			border-right: 3px solid green;
+			border-left-style: 3px solid green;
+			border-right-style: 3px solid green;
 		}
 		.bottom {
 			border-radius: 10px;
-			border-left: 3px solid green;
-			border-right: 3px solid green;
-			border-bottomt: 3px solid green;
+			border-left-style: 3px solid green;
+			border-right-style: 3px solid green;
+			border-bottom-style: 3px solid green;
 		}
 	</style>
 </head>
@@ -83,6 +83,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
