--- a/index.html
+++ b/index.html
@@ -26,20 +26,22 @@
 		td {
 		}
 		.top {
-			border-radius: 10px;
-			border-left-style: 3px solid green;
-			border-right-style: 3px solid green;
-			border-top-style: 3px solid green;
+			border-top-left-radius: 10px;
+			border-top-right-radius: 10px;
+			border-left-style: 5px solid green;
+			border-right-style: 5px solid green;
+			border-top-style: 5px solid green;
 		}
 		.center {
-			border-left-style: 3px solid green;
-			border-right-style: 3px solid green;
+			border-left-style: 5px solid green;
+			border-right-style: 5px solid green;
 		}
 		.bottom {
-			border-radius: 10px;
-			border-left-style: 3px solid green;
-			border-right-style: 3px solid green;
-			border-bottom-style: 3px solid green;
+			border-bottom-left-radius: 10px;
+			border-bottom-right-radius: 10px;
+			border-left-style: 5px solid green;
+			border-right-style: 5px solid green;
+			border-bottom-style: 5px solid green;
 		}
 	</style>
 </head>
@@ -83,6 +85,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
