--- a/index.html
+++ b/index.html
@@ -22,26 +22,27 @@
 			text-align: center;
 			margin-left: auto;
 		    margin-right: auto;
+			border-collapse: collapse;
 		}
 		td {
 		}
 		.top {
 			border-top-left-radius: 10px;
 			border-top-right-radius: 10px;
-			border-left: 5px solid green;
-			border-right: 5px solid green;
-			border-top: 5px solid green;
+			border-left: 5px ridge green;
+			border-right: 5px ridge green;
+			border-top: 5px ridge green;
 		}
 		.center {
-			border-left: 5px solid green;
-			border-right: 5px solid green;
+			border-left: 5px ridge green;
+			border-right: 5px ridge green;
 		}
 		.bottom {
 			border-bottom-left-radius: 10px;
 			border-bottom-right-radius: 10px;
-			border-left: 5px solid green;
-			border-right: 5px solid green;
-			border-bottom: 5px solid green;
+			border-left: 5px ridge green;
+			border-right: 5px ridge green;
+			border-bottom: 5px ridge green;
 		}
 	</style>
 </head>
@@ -85,6 +86,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
