--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
 		td {
 		}
 		.top {
+			border-left: 5px outset green;
+			border-right: 5px outset green;
+			border-top: 5px outset green;
 			border-top-left-radius: 10px;
 			border-top-right-radius: 10px;
-			border-left: 5px groove green;
-			border-right: 5px groove green;
-			border-top: 5px groove green;
 		}
 		.center {
-			border-left: 5px groove green;
-			border-right: 5px groove green;
+			border-left: 5px outset green;
+			border-right: 5px outset green;
 		}
 		.bottom {
+			border-left: 5px outset green;
+			border-right: 5px outset green;
+			border-bottom: 5px outset green;
 			border-bottom-left-radius: 10px;
 			border-bottom-right-radius: 10px;
-			border-left: 5px groove green;
-			border-right: 5px groove green;
-			border-bottom: 5px groove green;
 		}
 	</style>
 </head>
@@ -86,6 +86,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
