--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			border-left: 5px solid green;
 			border-right: 5px solid green;
 			border-top: 5px solid green;
-			border-top-left-radius: 10px;
+			border-radius: 10px;
 			border-top-right-radius: 10px;
 		}
 		.center {
@@ -86,6 +86,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
