--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 			text-align: center;
 			margin-left: auto;
 		    margin-right: auto;
-			border-collapse: collapse;
 		}
 		td {
 		}
@@ -30,7 +29,8 @@
 			border-left: 5px solid green;
 			border-right: 5px solid green;
 			border-top: 5px solid green;
-			border-radius: 10px;
+			border-top-left-radius: 10px;
+			border-top-right-radius: 10px;
 		}
 		.center {
 			border-left: 5px solid green;
@@ -85,6 +85,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
