--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 				<td width=45% class="top"><h2>Edition</h2></td>
 			</tr>
 			<tr>
-				<td class="center">Ce mode vous permettra de visualiser les différentes monographies de plantes et de produits enregistrées dans la base de données.<br/></td>
+				<td class="center">Ce mode vous permettra de visualiser les différentes monographies de plantes et de produits enregistrées dans la base de données.</td>
 				<td></td>
-				<td class="center">Ce mode vous permettra d'éditer les différentes monographies de plantes et de produits enregistrées dans la base de données. Vous pourrez également en ajouter et en supprimer. La base de données que vous enregistrerez à la fin sera la votre. Seules les personnes autorisées pourront la téléverser de nouveau pour proposer une mise à jour pour tous.<br/></td>
+				<td class="center">Ce mode vous permettra d'éditer les différentes monographies de plantes et de produits enregistrées dans la base de données. Vous pourrez également en ajouter et en supprimer. La base de données que vous enregistrerez à la fin sera la votre. Seules les personnes autorisées pourront la téléverser de nouveau pour proposer une mise à jour pour tous.</td>
 			</tr>
 			<tr>
-				<td class="bottom"><br/><button onclick="location.href='PlanteVet.html'" type="button">Démarrer</button><br/></td>
+				<td class="bottom"><br/><button onclick="location.href='PlanteVet.html'" type="button">Démarrer</button><br/><br/></td>
 				<td></td>
-				<td class="bottom"><br/><button onclick="location.href='PlanteVet_Edition.html'" type="button">Démarrer</button><br/></td>
+				<td class="bottom"><br/><button onclick="location.href='PlanteVet_Edition.html'" type="button">Démarrer</button><br/><br/></td>
 			</tr>
 		</table>
 		<br/>
@@ -85,6 +85,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
