--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			text-align: center;
 			margin-left: auto;
 		    margin-right: auto;
+			border-sapcing: 0;
 		}
 		td {
 		}
@@ -85,6 +86,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
