--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			text-align: center;
 			margin-left: auto;
 		    margin-right: auto;
-			border-sapcing: 0;
+			border-spacing: 0;
+			border-collapse: separate;
 		}
 		td {
 		}
@@ -86,6 +87,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
