--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <head>
 	<!--- Def jeu caracteres -->
 	<meta charset="UTF-8" />
+	<!--Favicon-->
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<!--- Windows-1252 / UTF-8 / iso-8859-1 -->
 	<!-- Page CSS -->
 	<style>
@@ -88,6 +89,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
