--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<!--- Def jeu caracteres -->
 	<meta charset="UTF-8" />
+	<!--Titre-->
+	<title>PlanteVet</title>
 	<!--Favicon-->
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<!--- Windows-1252 / UTF-8 / iso-8859-1 -->
@@ -89,6 +91,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
