--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!--Titre-->
 	<title>PlanteVet</title>
 	<!--Favicon-->
-	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<!--- Windows-1252 / UTF-8 / iso-8859-1 -->
 	<!-- Page CSS -->
 	<style>
@@ -91,6 +91,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
