--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -3,6 +3,10 @@
 <head>
 	<!--- Def jeu caracteres -->
 	<meta charset="UTF-8" />
+	<!--Titre-->
+	<title>PlanteVet</title>
+	<!--Favicon-->
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<!--- Windows-1252 / UTF-8 / iso-8859-1 -->
 	<!-- Page CSS -->
 	<style>
@@ -2196,6 +2200,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
