--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -3,6 +3,10 @@
 <head>
 	<!--- Def jeu caracteres -->
 	<meta charset="UTF-8" />
+	<!--Titre-->
+	<title>PlanteVet</title>
+	<!--Favicon-->
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<!-- Page CSS -->
 	<style>
 		body {
@@ -7486,4 +7490,5 @@
 	
 </body>
 </html>
+
 
