--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -2180,7 +2180,7 @@
 					<div id="FctCombo_Pl">Grande fonction concernée : <input type="button" id="FctInputCombo_Pl" value="Choisir" onclick="BuildFctInputCombo('Pl', 0);"></div>
 					<div id="EspeceCombo_Pl">Espèce concernée : <input type="button" id="EspeceInputCombo_Pl" value="Choisir" onclick="BuildEspeceInputCombo('Pl');"></div>
 					<br/>
-					<input type="button" value="Rechercher" onclick="DoSearchProductByInfos();" /><br/></td>
+					<input type="button" value="Rechercher" onclick="DoSearchPlanteByInfos();" /><br/></td>
 				<td class="casedroite" style="width: 10%; height: 20px; border:3px; border-style: ridge; border-color: #B119AA; border-radius: 10px; padding: 15px;"><input type="button" value="Rechercher par produits" onclick="DoSearchProduct();" /></td>
 			</tr>
 			<tr class="high">
@@ -2200,6 +2200,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
