--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<br/>Les informations sont amenées à évoluer avec le temps.
 		<br/><br/>Cette base de données a été créée dans le cadre d'une thèse vétérinaire.
 		<br/>
-		<br/><table align=center>
+		<br/><table align=center width=99%>
 			<tr>
 				<td widht=33%><button onclick="href='https://drive.google.com/drive/folders/1cEjrPO3Fqio0Vqe9bDSBnmaV66o9UAdq?usp=drive_link'" type="button">Accès mode local</button></td>
 				<td widht=33%><button onclick="href='https://drive.google.com/file/d/1MN-jsTDgolW7-eT1xfY0xK5pEPJdxpF_/view?usp=drive_link'" type="button">Accès thèse</button></td>
@@ -99,6 +99,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
