--- a/index.html
+++ b/index.html
@@ -91,14 +91,15 @@
 		<br/>
 		<br/><table align=center width=50%>
 			<tr>
-				<td><button onclick="href='https://drive.google.com/drive/folders/1cEjrPO3Fqio0Vqe9bDSBnmaV66o9UAdq?usp=drive_link'" type="button">Accès mode local</button></td>
-				<td><button onclick="href='https://drive.google.com/file/d/1MN-jsTDgolW7-eT1xfY0xK5pEPJdxpF_/view?usp=drive_link'" type="button">Accès thèse</button></td>
-				<td><button onclick="href='https://docs.google.com/document/d/19UThGQnSDQQSS7GLXsTRykIVcQ_j240DmRcTFQNxdeM/edit?usp=drive_link'" type="button">Accès Mode d'emploi</button></td>
+				<td><button onclick="location.href='https://drive.google.com/drive/folders/1cEjrPO3Fqio0Vqe9bDSBnmaV66o9UAdq?usp=drive_link'" type="button">Accès mode local</button></td>
+				<td><button onclick="location.href='https://drive.google.com/file/d/1MN-jsTDgolW7-eT1xfY0xK5pEPJdxpF_/view?usp=drive_link'" type="button">Accès thèse</button></td>
+				<td><button onclick="location.href='https://docs.google.com/document/d/19UThGQnSDQQSS7GLXsTRykIVcQ_j240DmRcTFQNxdeM/edit?usp=drive_link'" type="button">Accès Mode d'emploi</button></td>
 			</tr>
 		</table>
 	</div>
 </body>
 </html>
+
 
 
 
