--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -2334,7 +2334,7 @@
 		<br/>
 		<br/>Sélectionner la base de donnée "PlanteVet.db" :
 		<br/>
-		<br/><input id="DatabasePathBtn" type="file" value="PlanteVet.db" />
+		<br/><input id="DatabasePathBtn" type="file" />
 		<br/><input id="DatabaseImportBtn" type="button" value="Importer" onclick="DoImportDatabase();" />
 		<br/>
 		<br/>Les informations sont amenées à évoluer avec le temps.
@@ -2405,5 +2405,6 @@
 	</div>	
 </body>
 </html>
+
 
 
