--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -646,6 +646,103 @@
 			});
 			return;
 		}
+
+		// Query database product by name 		
+		function DoSearchProductByName()
+		{
+			let ResultListObj = document.getElementById("MatchingProductList");
+			let SearchTxt = document.getElementById("ProductNameLike").value;
+		
+			// exec SQL request on Working DB
+			console.log("Doing search product SQL request ...");
+			let SQLRequestResultObj = [];
+			try {
+				SQLRequestResultObj = globalThis.WorkingDB.exec({
+					sql: "select Id,Name from PRODUCT where Name like $a",
+					rowMode: 'array',
+					bind: {$a: SearchTxt},
+				});
+				console.log("End of search product SQL request.");
+			} catch(ErrorObj) {
+				console.log("Echec search product SQL request");
+			};
+			// Pre build result
+			let ResultList = "";
+			ResultList += "<input type=\"button\" value=\"Back to search\" onclick=\"GoBackToSearch('Pr');\" /><br/>";
+			ResultList += "Liste des produits correspondants \"" + SearchTxt + "\" :<br/>(Cliquer sur un produit pour en voir les informations)<br/>";		
+			// append sql result
+			let NbResultRow = SQLRequestResultObj.length;
+			if(NbResultRow == 0)
+			{
+				ResultList += "NO MATCHING ROW";
+			}
+			else
+			{			
+				for(let i = 0; i < NbResultRow; i++)
+				{
+					let TmpResultRow = SQLRequestResultObj[i];
+					
+					ResultList += "<span class=\"MatchResultClass\" onclick=\"DoViewProduct(" + TmpResultRow[0] +");\">Elt " + TmpResultRow[0] + " : " + TmpResultRow[1] + "</span><br/>";
+				}
+			}
+			// hidding search form
+			document.getElementById("ProductSearchForm").style.display = 'none';
+			// show result
+			ResultListObj.innerHTML = ResultList;
+			ResultListObj.style.display = 'inline';
+			ResultListObj.style.visibility = 'visible';
+			return;
+		}
+
+		
+
+		// Query database product by name 		
+		function DoSearchPlanteByName()
+		{
+			let ResultListObj = document.getElementById("MatchingProductList");
+			let SearchTxt = document.getElementById("PlanteNameLike").value;
+		
+			// exec SQL request on Working DB
+			console.log("Doing search plante SQL request ...");
+			let SQLRequestResultObj = [];
+			try {
+				SQLRequestResultObj = globalThis.WorkingDB.exec({
+					sql: "select Id,Name from PLANTE where Name like $a",
+					rowMode: 'array',
+					bind: {$a: SearchTxt},
+				});
+				console.log("End of search product SQL request.");
+			} catch(ErrorObj) {
+				console.log("Echec search product SQL request");
+			};
+			// Pre build result
+			let ResultList = "";
+			ResultList += "<input type=\"button\" value=\"Back to search\" onclick=\"GoBackToSearch('Pl');\" /><br/>";
+			ResultList += "Liste des plantes compatibles \"" + SearchTxt + "\" :<br/>(Cliquer sur une plante pour en voir la monographie)<br/>";		
+			// append sql result
+			let NbResultRow = SQLRequestResultObj.length;
+			if(NbResultRow == 0)
+			{
+				ResultList += "NO MATCHING ROW";
+			}
+			else
+			{			
+				for(let i = 0; i < NbResultRow; i++)
+				{
+					let TmpResultRow = SQLRequestResultObj[i];
+					
+					ResultList += "<span class=\"MatchResultClass\" onclick=\"DoViewPlante(" + TmpResultRow[0] +");\">Elt " + TmpResultRow[0] + " : " + TmpResultRow[1] + "</span><br/>";
+				}
+			}
+			// hidding search form
+			document.getElementById("ListePlanteForm").style.display = 'none';
+			document.getElementById("ListePlanteForm").style.visibility = 'Hidden'
+			// show result
+			ResultListObj.innerHTML = ResultList;
+			ResultListObj.style.display = 'inline';
+			ResultListObj.style.visibility = 'visible';
+			return;
+		}
 		
 		// Query database product by infos 		
 		function DoSearchProductByInfos()
@@ -2352,7 +2449,17 @@
 		<table class="full">
 			<tr class="high">
 				<td rowspan=2><b>Liste des produits renseignés :</b><br/><i>(Cliquer pour en voir les détails)</i><br/><div id="ProductList">Empty List</div></td>
-				<td rowspan=2 style="border-left: 3px ridge #B119AA; padding-left: 15px;">
+				<td style="border-left: 3px ridge #B119AA; padding-left: 15px;">
+					<h2>Recherche par nom</h2>
+					<input id="ProductNameLike" size="64" type="text" />
+					<br/>(Entrez '%' pour remplacer une chaîne de caractères et '_' pour remplacer un caractère unique.)
+					<br/>
+					<br/><input type="button" value="Rechercher" onclick="DoSearchProductByName();" />
+				</td>
+				<td class="casedroite" style="width: 10%; height: 20px; border:3px; border-style: ridge; border-color: #B119AA; border-radius: 10px; padding: 15px;"><input type="button" value="Rechercher par plantes" onclick="DoListPlantes();" /></td>
+			</tr>
+			<tr class="high">
+				<td style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche avancée :</h2>
 					<br/>Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.<br/><br/>
 					<div id="LaboCombo_Pr">Laboratoire : <input type="button" id="LaboInputCombo_Pr" value="Choisir" onclick="BuildLaboInputCombo('Pr', 0);"></div>
@@ -2360,9 +2467,6 @@
 					<div id="EspeceCombo_Pr">Espèce concernée : <input type="button" id="EspeceInputCombo_Pr" value="Choisir" onclick="BuildEspeceInputCombo('Pr');"></div>
 					<br/>
 					<input type="button" value="Rechercher" onclick="DoSearchProductByInfos();" /><br/></td>
-				<td class="casedroite" style="width: 10%; height: 20px; border:3px; border-style: ridge; border-color: #B119AA; border-radius: 10px; padding: 15px;"><input type="button" value="Rechercher par plantes" onclick="DoListPlantes();" /></td>
-			</tr>
-			<tr class="high">
 				<td></td>
 			</tr>
 		</table>
@@ -2373,7 +2477,17 @@
 		<table class="full">
 			<tr class="high">
 				<td rowspan=2><b>Liste des plantes renseignées :</b><br/><i>(Cliquer pour en voir la monographie)</i><br/><div id="PlanteList">Empty List</div></td>
-				<td rowspan=2 style="border-left: 3px ridge #B119AA; padding-left: 15px;">
+				<td style="border-left: 3px ridge #B119AA; padding-left: 15px;">
+					<h2>Recherche par nom</h2>
+					<input id="PlanteNameLike" size="64" type="text" />
+					<br/>(Entrez '%' pour remplacer une chaîne de caractères et '_' pour remplacer un caractère unique.)
+					<br/>
+					<br/><input type="button" value="Rechercher" onclick="DoSearchPlanteByName();" />
+				</td>
+				<td class="casedroite" style="width: 10%; height: 20px; border:3px; border-style: ridge; border-color: #B119AA; border-radius: 10px; padding: 15px;"><input type="button" value="Rechercher par produits" onclick="DoSearchProduct();" /></td>
+			</tr>
+			<tr class="high">
+				<td style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche avancée :</h2>
 					<br/>Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.<br/><br/>
 					<br/>
@@ -2386,9 +2500,6 @@
 					<div id="Effet2Combo_Pl">Effet secondaire : <input type="button" id="Effet2InputCombo_Pl" value="Choisir" onclick="BuildEffet2InputCombo('Pl', 0);"></div>
 					<br/>
 					<input type="button" value="Rechercher" onclick="DoSearchPlanteByInfos();" /><br/></td>
-				<td class="casedroite" style="width: 10%; height: 20px; border:3px; border-style: ridge; border-color: #B119AA; border-radius: 10px; padding: 15px;"><input type="button" value="Rechercher par produits" onclick="DoSearchProduct();" /></td>
-			</tr>
-			<tr class="high">
 				<td></td>
 			</tr>
 		</table>
@@ -2405,6 +2516,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
