--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -2478,8 +2478,8 @@
 	<div id="ListePlanteForm" style="visibility: hidden; display: none;">
 		<table class="full">
 			<tr class="high">
-				<td rowspan=2><b>Liste des plantes renseignées :</b><br/><i>(Cliquer pour en voir la monographie)</i><br/><div id="PlanteList">Empty List</div></td>
-				<td style="border-left: 3px ridge #B119AA; padding-left: 15px;">
+				<td rowspan=3><b>Liste des plantes renseignées :</b><br/><i>(Cliquer pour en voir la monographie)</i><br/><div id="PlanteList">Empty List</div></td>
+				<td rowspan=2 style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche par nom</h2>
 					<input id="PlanteNameLike" size="64" type="text" />
 					<br/>(Entrez '%' pour remplacer une chaîne de caractères et '_' pour remplacer un caractère unique.)
@@ -2506,6 +2506,9 @@
 					<input type="button" value="Rechercher" onclick="DoSearchPlanteByInfos();" /><br/></td>
 				<td></td>
 			</tr>
+			<tr>
+				<td></td>
+			</tr>
 		</table>
 	</div>
 	
@@ -2520,6 +2523,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
